changes process_batting_table to add player links

--- a/scrapping_bouling_and_batting_data.ipynb
+++ b/scrapping_bouling_and_batting_data.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,17 @@
     "                .rename(columns = {'Unnamed: 1':'Dismissal'})\n",
     "    )\n",
     "    # last 4 elements are junk and delete the last table\n",
-    "    return batting.iloc[:-4].dropna(axis = 1, how = 'all')\n",
+    "    batting = batting.iloc[:-4].dropna(axis = 1, how = 'all')\n",
+    "    batting_soup = BeautifulSoup(batting_outer_html)\n",
+    "\n",
+    "    player_links = batting_soup.find_all(class_ = 'ds-inline-flex ds-items-start ds-leading-none') \n",
+    "\n",
+    "    player_links = [a['href'] for a in player_links]\n",
+    "\n",
+    "    batting['player_links'] = player_links[:batting.shape[0]]\n",
+    "    \n",
+    "    return batting \n",
+    "\n",
     "\n",
     "def process_bowling_table(xpath):\n",
     "    bowling = driver.find_element(By.XPATH,xpath)\n",
@@ -74,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,9 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'NoneType' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\skshirsa\\OneDrive - Nokia\\Cricket Analytics Mini Project\\My Code\\scrapping_bouling_and_batting_data.ipynb Cell 5\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/skshirsa/OneDrive%20-%20Nokia/Cricket%20Analytics%20Mini%20Project/My%20Code/scrapping_bouling_and_batting_data.ipynb#X12sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m batting_one_df \u001b[39m=\u001b[39m process_batting_table(team_one_batting_xpath)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/skshirsa/OneDrive%20-%20Nokia/Cricket%20Analytics%20Mini%20Project/My%20Code/scrapping_bouling_and_batting_data.ipynb#X12sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m batting_two_df \u001b[39m=\u001b[39m process_batting_table(team_two_batting_xpath)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/skshirsa/OneDrive%20-%20Nokia/Cricket%20Analytics%20Mini%20Project/My%20Code/scrapping_bouling_and_batting_data.ipynb#X12sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m batting_one_df[\u001b[39m'\u001b[39m\u001b[39mteam_inning\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m link[\u001b[39m'\u001b[39m\u001b[39mteam_one\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/skshirsa/OneDrive%20-%20Nokia/Cricket%20Analytics%20Mini%20Project/My%20Code/scrapping_bouling_and_batting_data.ipynb#X12sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m batting_two_df[\u001b[39m'\u001b[39m\u001b[39mteam_inning\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m link[\u001b[39m'\u001b[39m\u001b[39mteam_two\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/skshirsa/OneDrive%20-%20Nokia/Cricket%20Analytics%20Mini%20Project/My%20Code/scrapping_bouling_and_batting_data.ipynb#X12sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m batting_one_df[\u001b[39m'\u001b[39m\u001b[39mmatch_id\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m link[\u001b[39m'\u001b[39m\u001b[39mscore_card\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m]\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'NoneType' object does not support item assignment"
+     ]
+    }
+   ],
    "source": [
     "# process batting \n",
     "batting_one_df = process_batting_table(team_one_batting_xpath)\n",
@@ -156,6 +178,57 @@
     "player_links = [a['href'] for a in player_links]\n",
     "player_links"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batting = driver.find_element(By.XPATH,team_one_batting_xpath)\n",
+    "batting_outer_html = batting.get_attribute('outerHTML')\n",
+    "batting = pd.read_html(batting_outer_html)[0] \n",
+    "batting = (batting\n",
+    "            .dropna(axis = 0, how = 'all')\n",
+    "            .dropna(axis = 1, how = 'all')\n",
+    "            .rename(columns = {'Unnamed: 1':'Dismissal'})\n",
+    ")\n",
+    "# last 4 elements are junk and delete the last table\n",
+    "batting = batting.iloc[:-4].dropna(axis = 1, how = 'all')\n",
+    "batting_soup = BeautifulSoup(batting_outer_html)\n",
+    "player_links = batting_soup.find_all(class_ = 'ds-inline-flex ds-items-start ds-leading-none') \n",
+    "player_links = [a['href'] for a in player_links]\n",
+    "batting['player_links'] = player_links[:batting.shape[0]]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['/player/najmul-hossain-shanto-629058',\n",
+       " '/player/litton-das-536936',\n",
+       " '/player/soumya-sarkar-436677',\n",
+       " '/player/shakib-al-hasan-56143',\n",
+       " '/player/afif-hossain-935995',\n",
+       " '/player/mosaddek-hossain-550133',\n",
+       " '/player/nurul-hasan-410765',\n",
+       " '/player/taskin-ahmed-538506',\n",
+       " '/player/nasum-ahmed-348049',\n",
+       " '/player/mustafizur-rahman-330902',\n",
+       " '/player/ebadot-hossain-932355']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
