--- a/scrapping_bowling_and_batting_data_one_page.ipynb
+++ b/scrapping_bowling_and_batting_data_one_page.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -159,14 +159,17 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>BATTING</th>\n",
-       "      <th>Dismissal</th>\n",
-       "      <th>R</th>\n",
-       "      <th>B</th>\n",
+       "      <th>BOWLING</th>\n",
+       "      <th>O</th>\n",
        "      <th>M</th>\n",
+       "      <th>R</th>\n",
+       "      <th>W</th>\n",
+       "      <th>ECON</th>\n",
+       "      <th>0s</th>\n",
        "      <th>4s</th>\n",
        "      <th>6s</th>\n",
-       "      <th>SR</th>\n",
+       "      <th>WD</th>\n",
+       "      <th>NB</th>\n",
        "      <th>player_links</th>\n",
        "      <th>team_inning</th>\n",
        "      <th>match_id</th>\n",
@@ -175,141 +178,103 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Paul Stirling</td>\n",
-       "      <td>c Curran b Wood</td>\n",
-       "      <td>14</td>\n",
+       "      <td>Ben Stokes</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0</td>\n",
        "      <td>8</td>\n",
-       "      <td>16</td>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>175.00</td>\n",
-       "      <td>/player/paul-stirling-303427</td>\n",
+       "      <td>3.42</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/player/ben-stokes-311158</td>\n",
        "      <td>England</td>\n",
        "      <td>T20I # 1846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Andy Balbirnie (c)</td>\n",
-       "      <td>c Hales b Livingstone</td>\n",
-       "      <td>62</td>\n",
-       "      <td>47</td>\n",
-       "      <td>74</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>131.91</td>\n",
-       "      <td>/player/andy-balbirnie-303423</td>\n",
-       "      <td>England</td>\n",
-       "      <td>T20I # 1846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Lorcan Tucker †</td>\n",
-       "      <td>run out (Rashid)</td>\n",
-       "      <td>34</td>\n",
-       "      <td>27</td>\n",
-       "      <td>42</td>\n",
+       "      <td>Chris Woakes</td>\n",
        "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>0</td>\n",
+       "      <td>13.66</td>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
        "      <td>1</td>\n",
-       "      <td>125.92</td>\n",
-       "      <td>/player/lorcan-tucker-928057</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/player/chris-woakes-247235</td>\n",
        "      <td>England</td>\n",
        "      <td>T20I # 1846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Harry Tector</td>\n",
-       "      <td>c †Buttler b Wood</td>\n",
+       "      <th>3</th>\n",
+       "      <td>Mark Wood</td>\n",
+       "      <td>4</td>\n",
        "      <td>0</td>\n",
+       "      <td>34</td>\n",
+       "      <td>3</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>13</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/player/mark-wood-351588</td>\n",
+       "      <td>England</td>\n",
+       "      <td>T20I # 1846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Sam Curran</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10.33</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>/player/harry-tector-961407</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/series/icc-men-s-t20-world-cup-2022-23-129813...</td>\n",
+       "      <td>England</td>\n",
+       "      <td>T20I # 1846</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Adil Rashid</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6.00</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/player/sam-curran-662973</td>\n",
        "      <td>England</td>\n",
        "      <td>T20I # 1846</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Curtis Campher</td>\n",
-       "      <td>c †Buttler b Wood</td>\n",
-       "      <td>18</td>\n",
-       "      <td>11</td>\n",
-       "      <td>22</td>\n",
+       "      <td>Liam Livingstone</td>\n",
        "      <td>3</td>\n",
        "      <td>0</td>\n",
-       "      <td>163.63</td>\n",
-       "      <td>/player/curtis-campher-595921</td>\n",
-       "      <td>England</td>\n",
-       "      <td>T20I # 1846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>George Dockrell</td>\n",
-       "      <td>b Livingstone</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>/player/george-dockrell-348034</td>\n",
-       "      <td>England</td>\n",
-       "      <td>T20I # 1846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Gareth Delany</td>\n",
-       "      <td>not out</td>\n",
-       "      <td>12</td>\n",
-       "      <td>10</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>120.00</td>\n",
-       "      <td>/player/gareth-delany-1099379</td>\n",
-       "      <td>England</td>\n",
-       "      <td>T20I # 1846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Mark Adair</td>\n",
-       "      <td>c Curran b Livingstone</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>/player/mark-adair-526441</td>\n",
-       "      <td>England</td>\n",
-       "      <td>T20I # 1846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Barry McCarthy</td>\n",
-       "      <td>b Curran</td>\n",
+       "      <td>17</td>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>/player/barry-mccarthy-348059</td>\n",
-       "      <td>England</td>\n",
-       "      <td>T20I # 1846</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Fionn Hand</td>\n",
-       "      <td>b Curran</td>\n",
+       "      <td>5.66</td>\n",
+       "      <td>5</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>4</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>50.00</td>\n",
-       "      <td>/player/fionn-hand-1099225</td>\n",
+       "      <td>0</td>\n",
+       "      <td>/player/adil-rashid-244497</td>\n",
        "      <td>England</td>\n",
        "      <td>T20I # 1846</td>\n",
        "    </tr>\n",
@@ -318,37 +283,31 @@
        "</div>"
       ],
       "text/plain": [
-       "               BATTING               Dismissal   R   B   M 4s 6s      SR  \\\n",
-       "0        Paul Stirling         c Curran b Wood  14   8  16  1  1  175.00   \n",
-       "2   Andy Balbirnie (c)   c Hales b Livingstone  62  47  74  5  2  131.91   \n",
-       "4      Lorcan Tucker †        run out (Rashid)  34  27  42  3  1  125.92   \n",
-       "6         Harry Tector       c †Buttler b Wood   0   2   3  0  0    0.00   \n",
-       "8       Curtis Campher       c †Buttler b Wood  18  11  22  3  0  163.63   \n",
-       "10     George Dockrell           b Livingstone   0   1   2  0  0    0.00   \n",
-       "12       Gareth Delany                 not out  12  10  22  1  0  120.00   \n",
-       "13          Mark Adair  c Curran b Livingstone   4   4   8  0  0  100.00   \n",
-       "15      Barry McCarthy                b Curran   3   3   4  0  0  100.00   \n",
-       "17          Fionn Hand                b Curran   1   2   4  0  0   50.00   \n",
+       "            BOWLING    O  M   R  W   ECON  0s 4s 6s WD NB  \\\n",
+       "0        Ben Stokes  2.2  0   8  1   3.42   7  0  0  0  0   \n",
+       "2      Chris Woakes    3  0  41  0  13.66   4  6  1  2  0   \n",
+       "3         Mark Wood    4  0  34  3   8.50  13  4  1  2  0   \n",
+       "5        Sam Curran    3  0  31  2  10.33   7  1  2  0  0   \n",
+       "7       Adil Rashid    4  0  24  0   6.00   6  1  0  0  0   \n",
+       "8  Liam Livingstone    3  0  17  3   5.66   5  1  0  0  0   \n",
        "\n",
-       "                      player_links team_inning     match_id  \n",
-       "0     /player/paul-stirling-303427     England  T20I # 1846  \n",
-       "2    /player/andy-balbirnie-303423     England  T20I # 1846  \n",
-       "4     /player/lorcan-tucker-928057     England  T20I # 1846  \n",
-       "6      /player/harry-tector-961407     England  T20I # 1846  \n",
-       "8    /player/curtis-campher-595921     England  T20I # 1846  \n",
-       "10  /player/george-dockrell-348034     England  T20I # 1846  \n",
-       "12   /player/gareth-delany-1099379     England  T20I # 1846  \n",
-       "13       /player/mark-adair-526441     England  T20I # 1846  \n",
-       "15   /player/barry-mccarthy-348059     England  T20I # 1846  \n",
-       "17      /player/fionn-hand-1099225     England  T20I # 1846  "
+       "                                        player_links team_inning     match_id  \n",
+       "0                          /player/ben-stokes-311158     England  T20I # 1846  \n",
+       "2                        /player/chris-woakes-247235     England  T20I # 1846  \n",
+       "3                           /player/mark-wood-351588     England  T20I # 1846  \n",
+       "5  /series/icc-men-s-t20-world-cup-2022-23-129813...     England  T20I # 1846  \n",
+       "7                          /player/sam-curran-662973     England  T20I # 1846  \n",
+       "8                         /player/adil-rashid-244497     England  T20I # 1846  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "bowling_one_df"
+   ]
   },
   {
    "cell_type": "code",
